# mathapi

./: .env.example  .gitignore  Dockerfile  Makefile  compose.override.dev.yaml  compose.yaml  pyproject.toml  requirements.txt
apps/mathFX/: apps.py  urls.py
apps/mathFX/migrations/: 0001_initial.py
apps/mathFX/models/: __init__.py  saveDerResult.py  saveIntegralResult.py
apps/mathFX/service/: __init__.py  derivative.py  integralFunx.py
apps/mathFX/views/: Integral_view.py  __init__.py  devirative_views.py  indexList.py
core/: asgi.py  settings.py  urls.py  wsgi.py
docker/service/: entrypoint.sh  start.sh
