[tool.poetry]
name = "django environ ruff"
version = "0.1.0"
description = ""
authors = ["zxc <them0tluckyperson@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.5"
environ = "^1.0"
ruff = "^0.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
