[tool.poetry]
name = "django environ ruff"
version = "0.1.0"
description = ""
authors = ["zxc <them0tluckyperson@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.5"
ruff = "^0.4.3"
django-environ = "^0.11.2"
psycopg = "^3.1.19"
psycopg2-binary = "^2.9.9"
sympy = "^1.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
